# Event_Planner

./: README.md  app.py  app1.py  event_plan.md  gunicorn_config.py  pyproject.toml  report.md  requirements.txt
src/event_planner/: crew.py  main.py
src/event_planner/config/: agents.yaml  tasks.yaml
templates/: index.html  index1.html  result.html  result1.html
