[project]
name = "event_planner"
version = "0.1.0"
description = "event_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]>=0.203.0,<1.0.0",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
]

[project.scripts]
event_planner = "event_planner.main:run"
run_crew = "event_planner.main:run"
train = "event_planner.main:train"
replay = "event_planner.main:replay"
test = "event_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
